# Canvas

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  sync_to.sh
canvas/: __init__.py  kernel_pack.py  modules.py  placeholder.py  runtime.py  sample.py  saver.py  utils.py
ccsrc/: cc_api.cpp
experiments/: alpha_partial_order_validation_experiment.py  alpha_partial_order_validation_experiment.sh  client.py  darts_search_and_train.sh  mount_ram.sh  nsys_profile.sh  offline_selector.py  produce_kernels.py  run_tmux.sh  script.sh  search.py  search_darts.py  search_entrans.py  selector.py  server.py  test.py  test1.py  time.py  train.py  train.sh  train_single_kernel.py  train_single_kernel.sh
experiments/base/: __init__.py  darts.py  darts_trainer.py  dataset.py  device.py  entrannas.py  entrans_trainer.py  log.py  loss.py  optim.py  optimizer.py  parser.py  proxyless.md  proxyless.py  proxyless_trainer.py  pruner.py  sche.py  sched.py  scheduler.py  trainer.py  utils.py
experiments/base/models/: __init__.py  canvas_levit.py  canvas_van.py  former.py  parallel_kernels.py  parallel_placeholder.py  van.py
experiments/collections/: attn_lka_max.py  conv1x1.py  conv2d.py  conv3x3.py  conv5x5.py  conv7x7.py  generated_lka.py  identity.py  k2311.py
experiments/collections/Canvas_02306_Kernel_4740052357514212317/: Kernel_4740052357514212317.dot  Kernel_4740052357514212317.json  Kernel_4740052357514212317.py
experiments/collections/Canvas_02306_Kernel_4744330614474431392/: Kernel_4744330614474431392.json  Kernel_4744330614474431392.py
experiments/collections/Canvas_02311_Kernel_7886596238811945167/: Kernel_7886596238811945167.dot  Kernel_7886596238811945167.json  Kernel_7886596238811945167.py  Kernel_7886596238811945167_2.py
experiments/collections/Canvas_02367_Kernel_16386123690870198621/: Kernel_16386123690870198621.py
experiments/collections/Canvas_02401_Kernel_14435538627243187570/: Kernel_14435538627243187570.json  Kernel_14435538627243187570.py
experiments/collections/Canvas_04519_582133419036941613/: Kernel_582133419036941613.dot  Kernel_582133419036941613.py
experiments/collections/Canvas_04637_145320056941583950/: Kernel_145320056941583950.py
experiments/collections/Canvas_05990_Kernel_13877190235998553350/: Kernel_13877190235998553350.dot  Kernel_13877190235998553350.json  Kernel_13877190235998553350.py
experiments/collections/Canvas_07027_Kernel_15812022909139887089/: Kernel_15812022909139887089.dot  Kernel_15812022909139887089.json  Kernel_15812022909139887089.py
experiments/collections/Canvas_07038_Kernel_4647922305226660848/: Kernel_4647922305226660848.json  Kernel_4647922305226660848.py
experiments/collections/Canvas_07072_Kernel_11998679846608418111/: Kernel_11998679846608418111.dot  Kernel_11998679846608418111.json  Kernel_11998679846608418111.py
experiments/collections/Canvas_07095_Kernel_3792100198503982614/: Kernel_3792100198503982614.json  Kernel_3792100198503982614.py
experiments/collections/Canvas_07159_Kernel_16331621907596408686/: Kernel_16331621907596408686.dot  Kernel_16331621907596408686.json  Kernel_16331621907596408686.py
experiments/collections/nice_kernels/: attn_lka.py  k2311.py
experiments/milestones/: canvas_former_imagenet_bs128.json  canvas_van_tiny_imagenet_bs1024_full.json  canvas_van_tiny_imagenet_bs128_ep1.json  debug_full.json
experiments/models/: __init__.py  van.py
experiments/scripts/: upload_oss.py
experiments/selector_experiment/: alpha_partial_order_validation_experiment.py  alpha_validation_experiment.py  baseline.py  draw.py  init_container.py  preliminary_search.py  selection.py  train_1000_kernels.py  validate_partial_order.py
include/Canvas/Algorithms/: Count.hpp  Fill.hpp
include/Canvas/CodeGen/: CodeGen.hpp  DotCodeGen.hpp  IRCodeGen.hpp  PyTorchCodeGen.hpp  TVMCodeGen.hpp  VarsCodeGen.hpp
include/Canvas/Core/: Graph.hpp  NetSpecs.hpp  Pass.hpp  Preferences.hpp  Primitive.hpp  Shape.hpp  Solution.hpp  Specs.hpp  Tensor.hpp  Variable.hpp
include/Canvas/Impls/: Impls.hpp
include/Canvas/Kernels/: Convolution.hpp
include/Canvas/Passes/: InplacePass.hpp
include/Canvas/Primitives/: Activation.hpp  Broadcast.hpp  ChannelShuffle.hpp  Convolution.hpp  Dot.hpp  Dropout.hpp  ElementWise.hpp  FC.hpp  Factory.hpp  Fold.hpp  Group.hpp  Input.hpp  MatrixMultiplication.hpp  Mix.hpp  Norm.hpp  (+9 more)
src/: CMakeLists.txt  pybind_api.cpp
src/Algorithms/: CMakeLists.txt  Count.cpp  Fill.cpp
src/CodeGen/: CMakeLists.txt  CodeGen.cpp  DotCodeGen.cpp  IRCodeGen.cpp  PyTorchCodeGen.cpp  TVMCodeGen.cpp  VarsCodeGen.cpp
src/Core/: CMakeLists.txt  Graph.cpp  NetSpecs.cpp  Primitive.cpp  Shape.cpp  Specs.cpp  Tensor.cpp  Variable.cpp
src/Impls/: CMakeLists.txt  Impls.cpp
src/Kernels/: CMakeLists.txt  Convolution.cpp
src/Passes/: CMakeLists.txt  InplacePass.cpp
src/Primitives/: Activation.cpp  Broadcast.cpp  CMakeLists.txt  ChannelShuffle.cpp  Convolution.cpp  Dot.cpp  Dropout.cpp  ElementWise.cpp  FC.cpp  Factory.cpp  Fold.cpp  Group.cpp  Input.cpp  MatrixMultiplication.cpp  Mix.cpp  Norm.cpp  Output.cpp  Pool.cpp  Reorder.cpp  Reshape.cpp  ScalePrimitive.cpp  Shift.cpp  Softmax.cpp  Transpose.cpp  Unfold.cpp
src/PyBind/: CMakeLists.txt  pybind_api.cpp
src/Search/: CMakeLists.txt  RandomSample.cpp  ReceptiveAnalyzer.cpp
src/Utils/: CMakeLists.txt  Common.cpp
tests/: CMakeLists.txt  test_canvas.py
tests/cpp/: CMakeLists.txt  CodeGen.cpp  Core.cpp  Passes.cpp  Primitives.cpp  Search.cpp  Utils.cpp
(+148 files in other folders)
